--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wdth,wght@62.5..100,100..900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Geist:wght@100..900&family=Noto+Sans+Thai:wght@100..900&display=swap');
 @plugin "tailwindcss-animate";
 @import "tailwindcss";
 
@@ -105,7 +105,7 @@ body {
   --breakpoint-xl: 1280px;
   --breakpoint-xl_extra: 1340px;
   --breakpoint-2xl: 1536px;
-  --font-noto: "Noto Sans Thai", sans-serif;
+  --font-noto: "Geist" ,"Noto Sans Thai", sans-serif;
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
